# WanderNote

./: .gitignore  README.md  退休旅行公众号写作助手.docx
backend/: .env.example  ENV-SETUP.md  README.md  pom.xml
backend/src/main/java/com/wandernote/: WanderNoteBackendApplication.java
backend/src/main/java/com/wandernote/common/: ApiResponse.java  BusinessException.java  ErrorCode.java  GlobalExceptionHandler.java
backend/src/main/java/com/wandernote/config/: JacksonConfig.java  JwtProperties.java  MyMetaObjectHandler.java  SecurityConfig.java  WanderNoteProperties.java
backend/src/main/java/com/wandernote/controller/: AdminController.java  AgentController.java  AuthController.java  (+4 more)
backend/src/main/resources/: application.yml
backend/src/main/resources/db/: schema-test.sql  schema.sql
deploy/: README.md
deploy/env/: backend.env.example
deploy/nginx/: README.md
deploy/systemd/: README.md
docs/decisions/: 001-frontend-mvp.md  002-photo-agent.md  003-backend-data-model.md  004-ai-writing-service.md  005-api-contract.md  006-external-services-and-secrets.md  007-project-architecture.md  008-mvp-roadmap.md  009-agent-prompts.md
frontend/: README.md
photo-agent/: .env.example  PROGRESS.md  README.md  config.example.yaml  install-dev.ps1  pyproject.toml  start-dev.bat  start-dev.ps1  start-prod.bat  start-prod.ps1  start.bat  start.ps1  test_api.py
photo-agent/agent/: __init__.py  api_client.py  config.py  cos_uploader.py  database.py  exif_reader.py  heartbeat.py  image_processor.py  main.py  metrics.py  scanner.py  sync_orchestrator.py
scripts/: README.md
(+19 files in other folders)
